--- a/index.html
+++ b/index.html
@@ -399,6 +399,14 @@
             </div>
           </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item filter-Thumbnail">
+            <div class="portfolio-img"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/245050172481053.6480124e99739.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+            
+              <a href="https://mir-s3-cdn-cf.behance.net/project_modules/1400/245050172481053.6480124e99739.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" ><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"></a>
+            </div>
+          </div>
 
         </div>
 
