--- a/index.html
+++ b/index.html
@@ -408,6 +408,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Thumbnail">
+            <div class="portfolio-img"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/00e929172534109.6480b92f62d09.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+            
+              <a href="/assets/img/0607.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" ><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"></a>
+            </div>
+          </div>
+
+        </div>
         </div>
 
       </div>
